# django-hostutils

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: CONTRIBUTING.md  STYLE_GUIDE.md
.github/.workflows/: pytest.yaml
.github/workflows/: bandit.yaml  black.yaml  coveralls.yaml  mypy.yaml  pypi.yaml  pytest.yaml  radon.yaml  ruff.yaml  safety.yaml  static.yml
docs/: django_settings.py  requirements.txt
docs/source/: about.rst  conf.py  features.rst  index.rst  installation.rst  internals.rst  version_history.rst
src/djangoaddicts/hostutils/: apps.py  forms.py  urls.py
src/djangoaddicts/hostutils/templates/hostutils/bs5/ajax/: get_cpu_stats.htm  host_process_details.htm
src/djangoaddicts/hostutils/templates/hostutils/bs5/detail/: cpu.html  detail_host.html  disk.html  memory.html  network.html  processes.html
src/djangoaddicts/hostutils/templates/hostutils/bs5/htmx/: get_cpu_stats.htm  get_partition_stats.htm  get_process_stats.htm
src/djangoaddicts/hostutils/templates/hostutils/bs5/snippets/: host_process_card.htm  host_process_card_swap.htm  hostutils_nav_menu.htm  processes_title_cards.htm
src/djangoaddicts/hostutils/views/: __init__.py  ajax.py  gui.py  htmx.py
src/djangoaddicts/templates/hostutils/bs5/ajax/: host_interface_stats.htm  host_partition_usage.htm
tests/: __init__.py
tests/core/: settings.py  urls.py
tests/unit/: test_ajax.py  test_gui.py  test_htmx.py
