[metadata]
author = David Slusser
author_email = dbslusser@gmail.com
name = django-hostutils
description = host utilities for django projects
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://github.com/davidslusser/django-hostutils
license = GNU GENERAL PUBLIC LICENSE
platform = any

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    =src

install_requires =
    django
    django-handyhelpers
    psutil
setup_requires =
    pytest-runner
    setuptools_scm
    wheel

[options.extras_require]
dev =
    bandit
    black
    build
    mypy
    mypy-extensions
    pylint
    pytest
    pytest-cov
    pytest-django
    types-python-dateutil
    typing_extensions


[options.packages.find]
where = src

exclude =
    __pycache__
    *.pyc
    test

[bdist_wheel]
universal = 1
